tests/invalid/generic_component_constructor_missing_arguments.wio
component Pair<T, U> {
    OnConstruct() {
    }
}

fn Entry() -> i32 {
    let pair = Pair();
    return 0;
}
